# xiaozhi-esp32-server

./: .dashboard-pids  .env.example  .env.production  .env.railway  .env.staging  .gitignore  .kiro-dev-branch-analysis.md  .kiro-loop-branch-state.md  .kiro-merge-conflicts-summary.md  AGENT_MODE_CHANGE_IMPLEMENTATION.md  APPROACH_COMPARISON.md  CHILD_PROFILE_INTEGRATION_DOCUMENTATION.md  CIRCLECI_TEST_RESULTS.md  CODEBASE_ANALYSIS.md  CONTINUOUS_MUSIC_STREAMING_IMPLEMENTATION.md  DASHBOARD_IMPORTANCE_GUIDE.md  DATABASE_ANALYSIS.md  DATABASE_PROGRESS_REPORT.md  DATABASE_SETUP_GUIDE.md  DATABASE_VERIFICATION_GUIDE.md  DEEPGRAM_ASR_SETUP.md  DYNAMIC_PROMPT_SYSTEM.md  DYNAMIC_PROMPT_UPDATE_DATAFLOW.md  Dockerfile-server  EMOTION_INTEGRATION_GUIDE.md  FUTURE_ENHANCEMENTS_RAG.md  GAME_AUDIO_GUIDE.md  GEMINI_REALTIME_INTEGRATION.md  GEMINI_REALTIME_QUICKSTART.md  GenerateAdminPassword.java  IMPLEMENTATION_ROADMAP.md  KID_PROFILE_API_REFERENCE.md  LIVEKIT_PIPELINE_TEST.md  MEM0_USAGE_IN_LIVEKIT.md  MOBILE_API_SPECIFICATION.md  MOBILE_MUSIC_PLAYBACK_IMPLEMENTATION.md  OPENAI_REALTIME_SETUP.md  PARENTAL_ANALYTICS_PLAN.md  PIPELINE_TEST.md  PLAN_TOC_GUIDED_RAG.md  (+159 more)
main/livekit-server/: .dockerignore  .env.example  .gitignore  AGENT_SILENCE_FIX.md  AiAgentChatHistoryService.java  BACKGROUND_AUDIO_README.md  BATTERY_STATUS_DEBUG.md  CHAT_HISTORY_IMPLEMENTATION.md  CHAT_HISTORY_INTEGRATION.md  CONFIG_SETUP.md  CONTINUOUS_MUSIC_STREAMING_IMPLEMENTATION.md  Cerebrium.toml  ChatHistoryController.java  DATADOG_SETUP.md  Dockerfile  EDUCATIONAL_AGENT_IMPROVEMENT_PLAN.md  FINAL_TEST_REPORT.md  (+102 more)
(+1166 files in other folders)
