[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.9"

dependencies = [
    "livekit-agents[openai,turn-detector,silero,cartesia,deepgram]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-groq",
    "livekit-plugins-elevenlabs",
    "python-dotenv",
    "paho-mqtt",
    "aiohttp",
    "pydub",
    "pytz",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.26.4",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
    "tabula-py>=2.10.0",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
